--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,163 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data Lovers</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root"><h1></h1></div>
-    <script src="main.js" type="module"></script>
-  </body>
+
+<head>
+  <meta name="viewport" content="width=device-width initial-scale = 1.0" />
+  <meta charset="utf-8" />
+  <title>Data Lovers</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Varela+Round" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Muli:300" rel="stylesheet">
+
+
+</head>
+
+<body class="bodystyle">
+
+
+  <section class="slider">
+
+
+    <div class="slides">
+
+      <input type="radio" name="radio-btn" id="radio1">
+
+      <input type="radio" name="radio-btn" id="radio2">
+
+      <input type="radio" name="radio-btn" id="radio3">
+
+      <input type="radio" name="radio-btn" id="radio4">
+
+      <div class="slide uno">
+        <img src="media/1.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <img src="media/2.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <img src="media/3.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <img src="media/4.jpg" alt="">
+      </div>
+
+      <div class="navegacion-auto">
+        <div class="auto-btn1"></div>
+        <div class="auto-btn2"></div>
+        <div class="auto-btn3"></div>
+        <div class="auto-btn4"></div>
+      </div>
+
+    </div>
+
+    <div class="navegacion-manual">
+      <label for="radio1" class="manual-btn"></label>
+      <label for="radio2" class="manual-btn"></label>
+      <label for="radio3" class="manual-btn"></label>
+      <label for="radio4" class="manual-btn"></label>
+    </div>
+
+  </section>
+
+  <!--ventana modal con informacion-->
+  <nav class="navbar-light">
+    <button id="btnNav" class="btn-nav"><b>Sobre el estudio</b></button>
+    <div id="VerModal" class="modalContainer">
+      <div class="modal-content">
+        <span class="close">x</span>
+        <h2 class="sobre-studio">Sobre Studio Ghibli</h2>
+        <h3>
+        <p>
+          <center>
+            Es un estudio japonés de animación fundado en 1985 por los cineastas <br> Hayao Miyazaki, Isao Takahata,
+            Toshio Suzuki y
+            Yasuyoshi Tokuma, considerado por la crítica especializada y
+            muchos cinéfilos como uno de los mejores estudios de animación del mundo en la actualidad.
+            <hr>​
+            Da click en el botón "¡Comenzar!" para conocer más al respecto o en el link de abajo
+            para ir directamente a la pagina oficial del estudio.
+        </p>
+        </h3>
+
+        <b><a href="https://www.ghibli.jp/">¡Llevame allá!</a></b>
+
+        </center>
+      </div>
+    </div>
+  </nav>
+
+
+  <!--contenido mostrado en la segunda división de la pagina-->
+
+
+  <div class="container">
+  
+   <div id="mySidenav" class="sidenav">
+  <a href="#" id="contact">Contact</a>
+</div>
+
+<div class="container-texto">
+    <center>
+  <h1 class="titulo">
+      <p>
+        Bienvenido a GhibliNautas
+      </p>
+    </h1>
+    
+    <h3 class="texto">
+      <p>
+        Donde te convertirás en un verdadero fánatico wiki de uno de los estudios de animación más importantes
+        del mundo, <b>Studio Ghibli.</b>
+      </p>
+    </h3>
+    <div class="cita">
+    <h3>
+      <p>
+       “Siempre querré a Ponyo, ya sea un pez, humana o ambas cosas”
+         <br>
+         -Ponyo en el acantilado (2008)
+      </p>
+    </h3>
+    </div>
+    <h2 class="diviertete">
+      <p>
+        ¡Diviértete!
+      </p>
+    </h2>
+    </center>
+    <center>
+      <button id="" class="btn-start">¡Comenzar!</button>
+    </center>
+  </div>
+  </div>
+
+
+  <!--
+    <br>
+   <br>
+    <section class="welcome-text">
+     
+      <h1 class="titulo-bienvenida ti-bienvenida"><strong>Bienvenido a GhibliNautas,</strong></h1>
+      <h3 class="texto-bienvenida">Donde te convertirás en un verdadero fanático wiki de <br> uno de
+      los estudios de animación más importantes del mundo, <strong>Studio Ghibli</strong></h3>
+      <h2 class="diviertete-texto">¡Diviértete!</h2>
+      </section>
+<br>
+
+  -->
+
+  <!--
+<section class="SideNav" id="ThisSideNav">
+  <a href="" id="contactanos"><strong>Contactános</strong></a>
+</section>
+-->
+  <div id="root">
+    <h1></h1>
+  </div>
+  <script src="main.js" type="module"></script>
+</body>
+
 </html>
