--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,7 @@
 
 </head>
 
-<body class="bodystyle">
-
-
+<body>
   <section class="slider">
 
 
@@ -62,76 +60,76 @@
 
   </section>
 
-  <!--ventana modal con informacion-->
-  <nav class="navbar-light">
-    <button id="btnNav" class="btn-nav"><b>Sobre el estudio</b></button>
-    <div id="VerModal" class="modalContainer">
-      <div class="modal-content">
-        <span class="close">x</span>
-        <h2 class="sobre-studio">Sobre Studio Ghibli</h2>
-        <h3>
-        <p>
-          <center>
-            Es un estudio japonés de animación fundado en 1985 por los cineastas <br> Hayao Miyazaki, Isao Takahata,
-            Toshio Suzuki y
-            Yasuyoshi Tokuma, considerado por la crítica especializada y
-            muchos cinéfilos como uno de los mejores estudios de animación del mundo en la actualidad.
-            <hr>​
-            Da click en el botón "¡Comenzar!" para conocer más al respecto o en el link de abajo
-            para ir directamente a la pagina oficial del estudio.
-        </p>
-        </h3>
-
-        <b><a href="https://www.ghibli.jp/">¡Llevame allá!</a></b>
-
-        </center>
-      </div>
-    </div>
-  </nav>
-
 
   <!--contenido mostrado en la segunda división de la pagina-->
 
 
   <div class="container">
-  
-   <div id="mySidenav" class="sidenav">
-  <a href="#" id="contact">Contact</a>
-</div>
-
-<div class="container-texto">
-    <center>
-  <h1 class="titulo">
-      <p>
-        Bienvenido a GhibliNautas
-      </p>
-    </h1>
-    
-    <h3 class="texto">
-      <p>
-        Donde te convertirás en un verdadero fánatico wiki de uno de los estudios de animación más importantes
-        del mundo, <b>Studio Ghibli.</b>
-      </p>
-    </h3>
-    <div class="cita">
-    <h3>
-      <p>
-       “Siempre querré a Ponyo, ya sea un pez, humana o ambas cosas”
-         <br>
-         -Ponyo en el acantilado (2008)
-      </p>
-    </h3>
+    <div id="mySidenav" class="sidenav">
+      <a href="#" id="contact">Contáctanos</a>
     </div>
-    <h2 class="diviertete">
-      <p>
-        ¡Diviértete!
-      </p>
-    </h2>
-    </center>
-    <center>
-      <button id="" class="btn-start">¡Comenzar!</button>
-    </center>
-  </div>
+
+    <nav class="navbar-light">
+      <a href="#" id="btnNav" class="btn-nav"><b>Sobre el estudio</b></a>
+      <div id="VerModal" class="modalContainer">
+        <div class="modal-content">
+          <span class="close">x</span>
+          <h2 class="sobre-studio">Sobre Studio Ghibli</h2>
+          <h3>
+            <p>
+              <center>
+                Es un estudio japonés de animación fundado en 1985 por los cineastas <br> Hayao Miyazaki, Isao Takahata,
+                Toshio Suzuki y
+                Yasuyoshi Tokuma, considerado por la crítica especializada y
+                muchos cinéfilos como uno de los mejores estudios de animación del mundo en la actualidad.
+                <hr>​
+                Da click en el botón "¡Comenzar!" para conocer más al respecto o en el link de abajo
+                para ir directamente a la pagina oficial del estudio.
+            </p>
+          </h3>
+          <center>
+            <b><a href="https://www.ghibli.jp/">Sitio oficial</a></b>
+          </center>
+          </center>
+        </div>
+      </div>
+    </nav>
+    <br>
+    <br>
+
+    <div class="container-texto">
+      <center>
+        <h1 class="titulo">
+          <p>
+            Bienvenido a GhibliNautas
+          </p>
+        </h1>
+
+        <h3 class="texto">
+          <p>
+            Donde te convertirás en un verdadero fánatico wiki de uno de los estudios de animación más importantes
+            del mundo, <b>Studio Ghibli.</b>
+          </p>
+        </h3>
+        <div class="cita">
+          <h3>
+            <p>
+              “Siempre querré a Ponyo, ya sea un pez, humana o ambas cosas”
+              <br>
+              -Ponyo en el acantilado (2008)
+            </p>
+          </h3>
+        </div>
+        <h2 class="diviertete">
+          <p>
+            ¡Diviértete!
+          </p>
+        </h2>
+      </center>
+      <center>
+        <button id="" class="btn-start">¡Comenzar!</button>
+      </center>
+    </div>
   </div>
 
 
