Solucionado problema de modal y margenes

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  
   <section class="slider">
 
 
@@ -64,13 +65,12 @@
   <!--contenido mostrado en la segunda división de la pagina-->
 
 
-  <div class="container">
+
     <div id="mySidenav" class="sidenav">
-      <a href="#" id="contact">Contáctanos</a>
+      <a id="contact">Contáctanos</a>
     </div>
 
-    <nav class="navbar-light">
-      <a href="#" id="btnNav" class="btn-nav"><b>Sobre el estudio</b></a>
+   
       <div id="VerModal" class="modalContainer">
         <div class="modal-content">
           <span class="close">x</span>
@@ -83,8 +83,8 @@
                 Yasuyoshi Tokuma, considerado por la crítica especializada y
                 muchos cinéfilos como uno de los mejores estudios de animación del mundo en la actualidad.
                 <hr>​
-                Da click en el botón "¡Comenzar!" para conocer más al respecto o en el link de abajo
-                para ir directamente a la pagina oficial del estudio.
+               <p class="modal-footer">Da click en el botón "¡Comenzar!" para conocer más al respecto o en el link de abajo
+                para ir directamente a la pagina oficial del estudio. </p>
             </p>
           </h3>
           <center>
@@ -96,7 +96,9 @@
     </nav>
     <br>
     <br>
-
+   
+    <div class="container1">
+        <button id="btnNav" class="btn-nav"><b>Sobre el estudio</b></button>
     <div class="container-texto">
       <center>
         <h1 class="titulo">
@@ -133,25 +135,7 @@
   </div>
 
 
-  <!--
-    <br>
-   <br>
-    <section class="welcome-text">
-     
-      <h1 class="titulo-bienvenida ti-bienvenida"><strong>Bienvenido a GhibliNautas,</strong></h1>
-      <h3 class="texto-bienvenida">Donde te convertirás en un verdadero fanático wiki de <br> uno de
-      los estudios de animación más importantes del mundo, <strong>Studio Ghibli</strong></h3>
-      <h2 class="diviertete-texto">¡Diviértete!</h2>
-      </section>
-<br>
 
-  -->
-
-  <!--
-<section class="SideNav" id="ThisSideNav">
-  <a href="" id="contactanos"><strong>Contactános</strong></a>
-</section>
--->
   <div id="root">
     <h1></h1>
   </div>
