--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body class="body-style">
   
   <section class="slider">
 
@@ -43,12 +43,6 @@
         <img src="media/4.jpg" alt="">
       </div>
 
-      <div class="navegacion-auto">
-        <div class="auto-btn1"></div>
-        <div class="auto-btn2"></div>
-        <div class="auto-btn3"></div>
-        <div class="auto-btn4"></div>
-      </div>
 
     </div>
 
@@ -88,7 +82,7 @@
             </p>
           </h3>
           <center>
-            <b><a href="https://www.ghibli.jp/">Sitio oficial</a></b>
+            <b><a id="sitio-studio" href="https://www.ghibli.jp/">Sitio oficial</a></b>
           </center>
           </center>
         </div>
@@ -96,9 +90,9 @@
     </nav>
     <br>
     <br>
-   
+  
     <div class="container1">
-        <button id="btnNav" class="btn-nav"><b>Sobre el estudio</b></button>
+       <button id="btnNav" class="btn-nav"><b>Sobre el estudio</b></button>
     <div class="container-texto">
       <center>
         <h1 class="titulo">
@@ -109,7 +103,7 @@
 
         <h3 class="texto">
           <p>
-            Donde te convertirás en un verdadero fánatico wiki de uno de los estudios de animación más importantes
+           Donde te convertirás en un verdadero fánatico wiki de uno de los estudios de animación más importantes
             del mundo, <b>Studio Ghibli.</b>
           </p>
         </h3>
@@ -129,13 +123,10 @@
         </h2>
       </center>
       <center>
-        <button id="" class="btn-start">¡Comenzar!</button>
+        <button class="btn-start" onclick="location.href='data.html'">¡Comenzar!</button>
       </center>
     </div>
-  </div>
-
-
-
+  
   <div id="root">
     <h1></h1>
   </div>
