Terminando estilos de data y responsive

--- a/src/data.html
+++ b/src/data.html
@@ -12,7 +12,7 @@
 
 <body class="body-data">
 <div class="container-header"><center><h1 class="header-text">Sobre peliculas del Studio Ghibli</h1>
-<h3 class="conoce-peliculas">¡Conoce todo sobre tus peliculas favoritas!</h3></center></div>
+<h3 class="conoce-peliculas">¡Conoce todo sobre tus peliculas favoritas!</h3></center><img id="totoro-header" src="media/totoro2.png"></div>
   <div class="barra">
     <h2>Menú</h2><img src="media/menu.png">
     <ul>
