--- a/src/index.html
+++ b/src/index.html
@@ -1,136 +1,110 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width initial-scale = 1.0" />
+    <meta charset="utf-8" />
+    <title>Data Lovers</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Noto+Serif|Varela+Round"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather|Muli:300"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta name="viewport" content="width=device-width initial-scale = 1.0" />
-  <meta charset="utf-8" />
-  <title>Data Lovers</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Varela+Round" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather|Muli:300" rel="stylesheet">
-
-
-</head>
-
-<body class="body-style">
-  
-  <section class="slider">
-
-
-    <div class="slides">
-
-      <input type="radio" name="radio-btn" id="radio1">
-
-      <input type="radio" name="radio-btn" id="radio2">
-
-      <input type="radio" name="radio-btn" id="radio3">
-
-      <input type="radio" name="radio-btn" id="radio4">
-
-      <div class="slide uno">
-        <img src="media/1.jpg" alt="">
-      </div>
-
-      <div class="slide">
-        <img src="media/2.jpg" alt="">
-      </div>
-
-      <div class="slide">
-        <img src="media/3.jpg" alt="">
-      </div>
-
-      <div class="slide">
-        <img src="media/4.jpg" alt="">
-      </div>
-
-
+  <body class="body-data">
+    <div class="container-header">
+      <center>
+        <h1 class="header-text">Sobre peliculas del Studio Ghibli</h1>
+        <h3 class="conoce-peliculas">
+          ¡Conoce todo sobre tus peliculas favoritas!
+        </h3>
+      </center>
+      <img id="totoro-header" src="media/totoro2.png" />
+    </div>
+    <div class="barra">
+      <h2>Menú</h2>
+      <img src="media/menu.png" />
+      <ul>
+        <li><a class="barra-item" href="">Directores</a></li>
+        <li><a class="barra-item" href="">Peliculas</a></li>
+        <li><a class="barra-item" href="">Personajes</a></li>
+        <li><a class="barra-item" href="">Datos curiosos</a></li>
+        <li><a class="barra-item" href="">Musica</a></li>
+        <br />
+        <li>
+          <button class="btn-inicio" onclick="location.href='index.html'">
+            Inicio
+          </button>
+        </li>
+      </ul>
     </div>
 
-    <div class="navegacion-manual">
-      <label for="radio1" class="manual-btn"></label>
-      <label for="radio2" class="manual-btn"></label>
-      <label for="radio3" class="manual-btn"></label>
-      <label for="radio4" class="manual-btn"></label>
+    <!--Ventana modal de inicio-->
+    <div id="tvesModal" class="modalContainer">
+      <div class="modal-content">
+        <center>
+              <h1 class="titulo">
+                <p>
+                  Bienvenido a GhibliNautas
+                </p>
+              </h1>
+            
+              <h3 class="texto">
+                <p>
+                 Donde te convertirás en un verdadero fánatico wiki de uno de los estudios de animación más importantes
+                  del mundo, <b>Studio Ghibli.</b>
+                </p>
+             </h3>
+              <div class="cita">
+                <h3>
+                  <p>
+                    “Siempre querré a Ponyo, ya sea un pez, humana o ambas cosas”
+                    <br>
+                    -Ponyo en el acantilado (2008)
+                  </p>
+                </h3>
+              </div>
+              <h2 class="diviertete">
+                <p>
+                  ¡Diviértete!
+                </p>
+              </h2>
+            </center>
+            <center>
+               <button class="close">¡Comenzar!</button>
+            </center> 
+      </div>
     </div>
 
-  </section>
+    <!-- <div class="container-texto">
+            
 
+    <!--botón desplegable de filter-->
+    <select name="selectFilter" id="BtnFilter">
+      <option class="optionAll" value="all" selected>Todas</option>
+      <option class="optionOlders" value="olders">Más antiguas</option>
+      <option class="optionNews" value="news">Más recientes</option>
+    </select>
+    <!--tarjetas de peliculas-->
+    <div class="row" id="items"></div>
 
-  <!--contenido mostrado en la segunda división de la pagina-->
-
-
-
-    <div id="mySidenav" class="sidenav">
-      <a id="contact">Contáctanos</a>
-    </div>
-
-   
-      <div id="VerModal" class="modalContainer">
-        <div class="modal-content">
-          <span class="close">x</span>
-          <h2 class="sobre-studio">Sobre Studio Ghibli</h2>
-          <h3>
-            <p>
-              <center>
-                Es un estudio japonés de animación fundado en 1985 por los cineastas <br> Hayao Miyazaki, Isao Takahata,
-                Toshio Suzuki y
-                Yasuyoshi Tokuma, considerado por la crítica especializada y
-                muchos cinéfilos como uno de los mejores estudios de animación del mundo en la actualidad.
-                <hr>​
-               <p class="modal-footer">Da click en el botón "¡Comenzar!" para conocer más al respecto o en el link de abajo
-                para ir directamente a la pagina oficial del estudio. </p>
-            </p>
-          </h3>
-          <center>
-            <b><a id="sitio-studio" href="https://www.ghibli.jp/">Sitio oficial</a></b>
-          </center>
-          </center>
+    <template id="template-card">
+      <div class="colum">
+        <div class="card">
+          <img src="" alt="" class="img-top" />
+          <div class="card-body">
+            <h5 class="card-title">Titulo</h5>
+            <h6 class="año">Año</h6>
+            <button class="btn-card">Ver más</button>
+          </div>
         </div>
       </div>
-    </nav>
-    <br>
-    <br>
-  
-    <div class="container1">
-       <button id="btnNav" class="btn-nav"><b>Sobre el estudio</b></button>
-    <div class="container-texto">
-      <center>
-        <h1 class="titulo">
-          <p>
-            Bienvenido a GhibliNautas
-          </p>
-        </h1>
+    </template>
 
-        <h3 class="texto">
-          <p>
-           Donde te convertirás en un verdadero fánatico wiki de uno de los estudios de animación más importantes
-            del mundo, <b>Studio Ghibli.</b>
-          </p>
-       </h3>
-        <div class="cita">
-          <h3>
-            <p>
-              “Siempre querré a Ponyo, ya sea un pez, humana o ambas cosas”
-              <br>
-              -Ponyo en el acantilado (2008)
-            </p>
-          </h3>
-        </div>
-        <h2 class="diviertete">
-          <p>
-            ¡Diviértete!
-          </p>
-        </h2>
-      </center>
-      <center>
-        <button class="btn-start" onclick="location.href='data.html'">¡Comenzar!</button>
-      </center>
-    </div>
-  
-  <div id="root">
-    <h1></h1>
-  </div>
-  <script src="main.js" type="module"></script>
-</body>
-
+    <script src="main.js" type="module"></script>
+  </body>
 </html>
