--- a/src/index.html
+++ b/src/index.html
@@ -85,9 +85,9 @@
 
     <!--botón desplegable de filter-->
     <select name="selectFilter" id="BtnFilter">
-      <option class="optionAll" value="all" selected>Todas</option>
-      <option class="optionOlders" value="olders">Más antiguas</option>
-      <option class="optionNews" value="news">Más recientes</option>
+      <option id="optionAll" value="all" selected>Todas</option>
+      <option id="optionOlders" value="olders">Más antiguas</option>
+      <option id="optionNews" value="news">Más recientes</option>
     </select>
     <!--tarjetas de peliculas-->
     <div class="row" id="items"></div>
