--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <ul>
         <li><a class="barra-item" href="">Directores</a></li>
         <li><a class="barra-item" href="">Peliculas</a></li>
-        <li><a class="barra-item" href="">Personajes</a></li>
+        <li><a id="personajes" class="barra-item" href="">Personajes</a></li>
         <li><a class="barra-item" href="">Datos curiosos</a></li>
         <li><a class="barra-item" href="">Musica</a></li>
         <br />
@@ -80,15 +80,19 @@
       </div>
     </div>
 
-    <!-- <div class="container-texto">
-           
-
     <!--botón desplegable de filter-->
     <select name="selectFilter" id="BtnFilter">
       <option id="optionAll" value="all" selected>Todas</option>
       <option id="optionOlders" value="olders">Más antiguas</option>
       <option id="optionNews" value="news">Más recientes</option>
     </select>
+
+    <!--Botón desplegable de ordenar-->
+        <select name="selectSort" id="BtnSort">
+      <option id="optionAZ" value="AZ">A-Z</option>
+      <option id="optionZA" value="ZA">Z-A</option>
+    </select>
+
     <!--tarjetas de peliculas-->
     <div class="row" id="items"></div>
 
@@ -97,9 +101,11 @@
         <div class="card">
           <img src="" alt="" class="img-top" />
           <div class="card-body">
-            <h5 class="card-title">Titulo</h5>
+            <h4 class="card-title">Titulo</h4>
+            <h5 id="director">Director</h5>
             <h6 class="año">Año</h6>
-            <button class="btn-card">Ver más</button>
+            
+
           </div>
         </div>
       </div>
