Test funciones SortZA y filterDataNews

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width initial-scale = 1.0" />
     <meta charset="utf-8" />
-    <title>Data Lovers</title>
+    <title>GhibliNautas</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Noto+Serif|Varela+Round"
@@ -99,8 +99,8 @@
     <template id="template-card">
       <div class="colum">
         <div class="card">
-          <img src="" alt="" class="img-top" />
-          <div class="card-body">
+          <img class="img-top" />
+         <div class="card-body">
             <h4 class="card-title">Titulo</h4>
             <h5 id="director">Director</h5>
             <h6 class="año">Año</h6>
