limpieza de código(nomenclatura de variables y)

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,6 @@
         <li><a class="barra-item" href="">Directores</a></li>
         <li><a class="barra-item" href="">Peliculas</a></li>
         <li><a id="personajes" class="barra-item" href="">Personajes</a></li>
-        <li><a class="barra-item" href="">Datos curiosos</a></li>
-        <li><a class="barra-item" href="">Musica</a></li>
         <br />
         <li>
           <button class="btn-inicio" onclick="location.href='index.html'">
@@ -81,14 +79,14 @@
     </div>
 
     <!--botón desplegable de filter-->
-    <select name="selectFilter" id="BtnFilter">
+    <select name="selectFilter" id="btnFilter">
       <option id="optionAll" value="all" selected>Todas</option>
       <option id="optionOlders" value="olders">Más antiguas</option>
       <option id="optionNews" value="news">Más recientes</option>
     </select>
 
     <!--Botón desplegable de ordenar-->
-        <select name="selectSort" id="BtnSort">
+        <select name="selectSort" id="btnSort">
       <option id="optionAZ" value="AZ">A-Z</option>
       <option id="optionZA" value="ZA">Z-A</option>
     </select>
@@ -103,7 +101,7 @@
          <div class="card-body">
             <h4 class="card-title">Titulo</h4>
             <h5 id="director">Director</h5>
-            <h6 class="año">Año</h6>
+            <h6 class="date">Año</h6>
             
 
           </div>
