--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
 
     <!--Menú lateral en el que se incluyen botones de filtrado y ordenado-->
     <div id="show-menu" class="menu-icons">
+      <p class="menu-text">menú</p>
       <div class="pulse1"></div>
       <div class="pulse2"></div>
       <div class="pulse3"></div>
