--- a/src/index.html
+++ b/src/index.html
@@ -138,6 +138,7 @@
           class="scoreFeedback-icon"
           alt="scoreFeedback_icon"
         />
+        <p class="scorehg" id="highstadic" ></p>
         <h6>
           <i
             >Nota: estas puntuaciones no definen "las mejores producciones" del
