test de funcion sortAZ

--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
         <h6>
           <i
             >Nota: estas puntuaciones no definen "las mejores producciones" del
-            estudio, por otra parte, hacen referencia a la popularidad obtenida
+            estudio, hacen referencia a la popularidad obtenida
             durante su temporada de promoción posterior a su estreno.</i
           >
         </h6>
